--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^21.3.0",
+    "@react-native-firebase/firestore": "^21.3.0",
     "@react-native-firebase/messaging": "^21.3.0",
+    "express": "^4.21.1",
     "react": "18.3.1",
     "react-native": "0.76.1"
   },
